// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LabelValueInput /> fetches suggestions on mount 1`] = `
"
<div class=" css-b62m3t-container">
  <span
    id="react-select-silence-input-label-value-2-live-region"
    class="css-1f43avz-a11yText-A11yText"
  >
  </span>
  <span
    aria-live="polite"
    aria-atomic="false"
    aria-relevant="additions text"
    role="log"
    class="css-1f43avz-a11yText-A11yText"
  >
  </span>
  <div class="react-select__control css-18hiu1u-control">
    <div class="react-select__value-container react-select__value-container--is-multi css-127noje-ValueContainer">
      <div>
        <div
          class="react-select__placeholder css-1jqq78o-placeholder"
          id="react-select-silence-input-label-value-2-placeholder"
        >
          Label value
        </div>
      </div>
      <div
        class="react-select__input-container css-3qym3m-Input"
        data-value
      >
        <input
          class="react-select__input"
          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
          autocapitalize="none"
          autocomplete="off"
          autocorrect="off"
          id="react-select-silence-input-label-value-2-input"
          spellcheck="false"
          tabindex="0"
          type="text"
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          role="combobox"
          aria-activedescendant
          aria-describedby="react-select-silence-input-label-value-2-placeholder"
          value
        >
      </div>
    </div>
    <div class="react-select__indicators css-vcwr3k-IndicatorsContainer">
      <span class="react-select__indicator-separator css-1u9des2-indicatorSeparator">
      </span>
      <div
        class="react-select__indicator react-select__dropdown-indicator css-1xc3v61-indicatorContainer"
        aria-hidden="true"
      >
        <svg
          height="20"
          width="20"
          viewbox="0 0 20 20"
          aria-hidden="true"
          focusable="false"
          class="css-tj5bde-Svg"
        >
          <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<LabelValueInput /> matches snapshot 1`] = `
"
<div class=" css-b62m3t-container">
  <span
    id="react-select-silence-input-label-value-1-live-region"
    class="css-1f43avz-a11yText-A11yText"
  >
  </span>
  <span
    aria-live="polite"
    aria-atomic="false"
    aria-relevant="additions text"
    role="log"
    class="css-1f43avz-a11yText-A11yText"
  >
  </span>
  <div class="react-select__control css-18hiu1u-control">
    <div class="react-select__value-container react-select__value-container--is-multi css-127noje-ValueContainer">
      <div>
        <div
          class="react-select__placeholder css-1jqq78o-placeholder"
          id="react-select-silence-input-label-value-1-placeholder"
        >
          Label value
        </div>
      </div>
      <div
        class="react-select__input-container css-3qym3m-Input"
        data-value
      >
        <input
          class="react-select__input"
          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
          autocapitalize="none"
          autocomplete="off"
          autocorrect="off"
          id="react-select-silence-input-label-value-1-input"
          spellcheck="false"
          tabindex="0"
          type="text"
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          role="combobox"
          aria-activedescendant
          aria-describedby="react-select-silence-input-label-value-1-placeholder"
          value
        >
      </div>
    </div>
    <div class="react-select__indicators css-vcwr3k-IndicatorsContainer">
      <span class="react-select__indicator-separator css-1u9des2-indicatorSeparator">
      </span>
      <div
        class="react-select__indicator react-select__dropdown-indicator css-1xc3v61-indicatorContainer"
        aria-hidden="true"
      >
        <svg
          height="20"
          width="20"
          viewbox="0 0 20 20"
          aria-hidden="true"
          focusable="false"
          class="css-tj5bde-Svg"
        >
          <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;
